server/compilers/goLiteJS/src/test/ml1/invalid/func13.go
// missing left curly brace
package main

func f()
    return
}
